@startuml

title __FRAGMENTUSE's Class Diagram__\n

  namespace Fragmentuse {
    class Fragmentuse.FindFragment {
        ~ editText : EditText
        ~ iv_find : ImageView
        ~ rv_find : RelativeLayout
        ~ tv_heat_find : TextView
        ~ tv_tips_find : TextView
        ~ tv_title_find : TextView
        {static} - TAG : String
        - bSearchEdit : BSearchEdit
        - list : ArrayList<String>
        - url : String
        + onCreateView()
        - initedit()
        - refreshBarChart()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.FirstFragment {
        ~ mTabLayout : TabLayout
        ~ mViewPager : ViewPager
        + onCreate()
        + onCreateView()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.PersonFragment {
        + onCreateView()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.RecomendFragment2 {
        ~ recyclerView : RecyclerView
        ~ speed : Speed
        {static} - TAG : String
        - foodBeanList : List<FoodBean>
        - intercept_back_event : boolean
        - ld : LoadingDialog
        - repeatTime : int
        + setdata()
        + showError()
        # createPresenter()
        # getLayout()
        # initEventAndData()
        - initrv()
        - setloading()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.RecommendFragment {
        ~ recyclerView : RecyclerView
        ~ speed : Speed
        {static} - TAG : String
        - foodBeanList : List<FoodBean>
        - intercept_back_event : boolean
        - ld : LoadingDialog
        - repeatTime : int
        + onCreateView()
        + onStart()
        - initrv()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.SecondFragment {
        ~ mTabLayout : TabLayout
        ~ mViewPager : ViewPager
        - Titles : String[]
        - fragments : List<Fragment>
        + onCreateView()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.SecondViewModel {
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.ThirdFragment {
        ~ mFragments : List<Fragment>
        ~ mTitles : String[]
        ~ mhandler : Handler
        ~ tl_third : TabLayout
        ~ vp_third : ViewPager
        {static} - TAG : String
        + onCreateView()
        - initechart()
        - initviewpager()
        - refreshLineChart()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.ThirdViewModel {
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.WeekNotesFragment {
        ~ imageViews : List<ImageView>
        ~ iv_add_monday_note : ImageView
        ~ ll_addnote_moday : LinearLayout
        ~ ll_monday_note : LinearLayout
        ~ rv_monday : RecyclerView
        - flags : int[]
        - position : int
        + llonclick()
        + onCreateView()
        - initRV()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.WeekNotesFragment2 {
        ~ rv_weeknotes : RecyclerView
        + onCreateView()
        - initrv()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.demo {
        + onCreateView()
    }
  }
  

  namespace Fragmentuse {
    class Fragmentuse.demofragment {
        + onCreateView()
    }
  }
  

  Fragmentuse.FindFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.FindFragment o-- Service.EChartView : barChart
  Fragmentuse.FirstFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.FirstFragment o-- Adapter.MyFragmentPagerAdapter : myFragmentPagerAdapter
  Fragmentuse.PersonFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.RecomendFragment2 .up.|> Contract.RecommendFragmentContract.RecommendFragmentView
  Fragmentuse.RecomendFragment2 -up-|> Base.BaseFragment
  Fragmentuse.RecomendFragment2 o-- Adapter.RecommendRVAdapter : adapter
  Fragmentuse.RecommendFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.RecommendFragment o-- Adapter.RecommendRVAdapter : adapter
  Fragmentuse.SecondFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.SecondFragment o-- Adapter.ViewPagerAdapter : myFragmentPagerAdapter
  Fragmentuse.SecondViewModel -up-|> androidx.lifecycle.ViewModel
  Fragmentuse.ThirdFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.ThirdFragment o-- Service.EChartView : lineChart
  Fragmentuse.ThirdViewModel -up-|> androidx.lifecycle.ViewModel
  Fragmentuse.WeekNotesFragment -up-|> androidx.fragment.app.Fragment
  Fragmentuse.WeekNotesFragment o-- Adapter.WeekNotesRVAdapter : weekNotesRVAdapter
  Fragmentuse.WeekNotesFragment2 -up-|> androidx.fragment.app.Fragment
  Fragmentuse.demo -up-|> androidx.fragment.app.Fragment
  Fragmentuse.demofragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
